--- a/css/styles.css
+++ b/css/styles.css
@@ -34,20 +34,33 @@ h2 {
   font-weight: normal;
   box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.25);
   padding: 25px 30px;
+  z-index: 9999;
 }
 
 main {
   padding: 100px 0px;
-  display: flex;
-  justify-content: center;
-  gap: 30px;
+  width: max-content;
+  margin: 0 auto;
 }
 
 .card {
-  display: flex;
-  flex-direction: column;
+  display: inline-block;
+  margin-right: 30px;
   width: 300px;
   position: relative;
+  z-index: -20;
+}
+
+.banner-batman {
+  background-image: url(/clase10-front1/img/bg-batman.png);
+  width: 300px;
+  height: 193px;
+}
+
+.banner-harley {
+  background-image: url(/clase10-front1/img/bg-harley.png);
+  width: 300px;
+  height: 193px;
 }
 
 .card-profile {
@@ -68,13 +81,16 @@ main {
 .content {
   background-color: #F3F3F3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  padding: 80px 10px 30px 10px;
 }
 
-.text {
-  padding: 80px 10px 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+.content h2 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.content p {
+  margin-bottom: 30px;
 }
 
 button {
@@ -84,7 +100,7 @@ button {
   width: 128.78px;
   height: 48.52px;
   border: none;
-  margin: 10px auto 30px auto;
+  margin: 10px auto 0 auto;
   display: block;
   transition-property: opacity scale;
   transition-duration: 300ms;
