--- a/css/styles.css
+++ b/css/styles.css
@@ -20,12 +20,16 @@ p, h1, h2, h3 {
   margin: 0;
 }
 
+ul {
+  list-style: none;
+}
+
 h2 {
   text-align: center;
 }
 
 .discount {
-  background-color: #1CD1B0;
+  background-color: #D1891C;
   padding: 10px 30px;
 }
 
@@ -35,20 +39,212 @@ h2 {
   box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.25);
   padding: 25px 30px;
   z-index: 9999;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+  color: #fff;
+  gap: 10px;
+}
+
+#menuToggle
+{
+  display: block;
+  position: relative;
+  top: 2px;
+  left: 0px;
+
+  z-index: 1;
+
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  #menuToggle {
+    display: none;
+  }
+}
+
+#menuToggle a
+{
+  text-decoration: none;
+  color: #232323;
+
+  transition: color 0.3s ease;
+}
+
+#menuToggle a:hover
+{
+  color: tomato;
+}
+
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+
+  cursor: pointer;
+
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+
+  -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+
+  background: #cdcdcd;
+  border-radius: 3px;
+
+  z-index: 1;
+
+  transform-origin: 4px 0px;
+
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/*
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  height: 100vh;
+
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
+
+@media (min-width: 768px) {
+  .burger-menu {
+    display: none;
+  }
 }
 
 main {
   padding: 100px 0px;
-  width: max-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 0 auto;
+  row-gap: 15px;
+}
+
+@media (min-width: 768px) {
+  main {
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+  }
+}
+
+@media (min-width: 992px) {
+  main {
+    width: 1000px;
+    justify-content: start;
+  }
 }
 
 .card {
-  display: inline-block;
   margin-right: 30px;
   width: 300px;
   position: relative;
   z-index: -20;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  overflow: hidden;
+}
+
+.harley {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .harley {
+    display: block;
+  }
 }
 
 .banner-batman {
@@ -59,6 +255,18 @@ main {
 
 .banner-harley {
   background-image: url(../img/bg-harley.png);
+  width: 300px;
+  height: 193px;
+}
+
+.banner-maravilla {
+  background-image: url(../img/bg-maravilla.png);
+  width: 300px;
+  height: 193px;
+}
+
+.banner-superman {
+  background-image: url(../img/bg-superman.png);
   width: 300px;
   height: 193px;
 }
