--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,11 @@ h2 {
   padding: 10px 30px;
 }
 
+.heroes {
+  color: #fff;
+  text-decoration: none;
+}
+
 .header-bar {
   background-color: #00669F;
   font-weight: normal;
@@ -202,6 +207,22 @@ h2 {
   }
 }
 
+.new-nav {
+  background-color: #001D2D;
+  padding: 1px 40px;
+}
+
+.new-ul {
+  display: flex;
+  justify-content: end;
+  gap: 10px;
+}
+
+.new-ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+
 main {
   padding: 100px 0px;
   display: flex;
@@ -324,4 +345,107 @@ footer {
   background-color: #00669F;
   color: #fff;
   padding: 20px 30px;
+}
+
+/* Contact */
+
+.form-container {
+  width: 954px;
+  background-color: #00669F;
+  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.3);
+  border-radius: 49.0901px;
+  margin: 40px auto;
+}
+
+.form-container h2 {
+  font-size: 40px;
+  color: #fff;
+  padding-top: 20px;
+}
+
+.form-container p {
+  font-size: 14px;
+  color: #fff;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.form {
+  width: 708px;
+  margin: 0 auto;
+}
+
+.form-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.field {
+  width: 100%;
+  margin-bottom: 40px;
+}
+
+.field label {
+  display: block;
+  margin-bottom: 5px;
+  color: #fff;
+}
+
+.field input,
+.field select {
+  background: #FFFFFF;
+  border: 1.53407px solid rgba(0, 0, 0, 0.1);
+  border-radius: 15.3407px;
+  padding: 20px;
+  width: 100%;
+}
+
+.boxes {
+  width: 100%;
+}
+
+.checks label {
+  color: #fff;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.checks label input {
+  padding-left: 10px;
+}
+
+.checkbox {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 10px;
+}
+
+.checkbox label {
+  margin: 0;
+}
+
+textarea {
+  width: 100%;
+}
+
+.submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 70px auto auto;
+  width: 466px;
+  padding-bottom: 30px;
+}
+
+input[type="submit"] {
+  border: none;
+  background-color: #1CD1B0;
+  font-size: 40px;
+  border-radius: 23.011px;
+  width: 100%;
 }
