--- a/css/styles.css
+++ b/css/styles.css
@@ -417,18 +417,6 @@ footer {
   padding-left: 10px;
 }
 
-.checkbox {
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  gap: 20px;
-  margin-bottom: 10px;
-}
-
-.checkbox label {
-  margin: 0;
-}
-
 textarea {
   width: 100%;
 }
@@ -448,4 +436,103 @@ input[type="submit"] {
   font-size: 40px;
   border-radius: 23.011px;
   width: 100%;
+  transition-property: background-color color;
+  transition-duration: 300ms;
+}
+
+input[type="submit"]:hover {
+  background-color: #001D2D;
+  color: #fff;
+}
+
+.plus {
+  position: absolute;
+  right: 8%;
+  top: 60%;
+  color:#fff;
+  background-color: #00669F;
+  border-radius: 100%;
+  height: 82px;
+  width: 82px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 70px;
+  transition-property: background-color;
+  transition-duration: 300ms;
+}
+
+.plus:hover {
+  background-color: #001D2D;
+}
+
+/* Estilos para ocultar el checkbox original */
+.colored-checkbox {
+  position: absolute;
+}
+
+/* Estilos para crear un checkbox personalizado */
+.colored-checkbox::before {
+  content: "";
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  border-radius: 4px;
+  margin-right: 5px;
+  vertical-align: middle;
+}
+
+/* Estilos para cambiar el color del checkbox al estar seleccionado */
+.colored-checkbox:checked::before {
+  background-color: #34CEFF; /* Aquí puedes cambiar el color deseado */
+}
+
+.checkbox label {
+  padding-left: 30px;
+}
+
+.radios {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 20px;
+  margin-bottom: 10px;
+}
+
+.radios label {
+  margin: 0;
+}
+
+/* input[type="radio"] {
+  : #34CEFF;
+} */
+
+/* Estilos para ocultar los radio buttons originales */
+.colored-radio {
+  position: absolute;
+  opacity: 0;
+}
+
+/* Estilos para crear un radio button personalizado */
+.colored-radio + label {
+  position: relative;
+  padding-left: 25px;
+  cursor: pointer;
+}
+
+.colored-radio + label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  background-color: #fff;
+}
+
+/* Estilos para cambiar el color del radio button al estar seleccionado */
+.colored-radio:checked + label::before {
+  background-color: #34CEFF; /* Aquí puedes cambiar el color deseado */
 }
